Fix comment dropdown overflow

--- a/src/components/commentContainer/commentContainer.css
+++ b/src/components/commentContainer/commentContainer.css
@@ -23,7 +23,7 @@
   gap: 15px;
   min-height: 40px;
   max-height: 500px;
-  overflow-y: auto;
+  overflow-y: overlay;
   padding-right: 10px;
   padding-top: 5px;
 }
