--- a/src/components/commentContent/commentContent.css
+++ b/src/components/commentContent/commentContent.css
@@ -116,28 +116,28 @@
 
 .commentDropdown {
   position: absolute;
-  top: calc(100% + 15px);
-  right: 0;
+  top: 0px;
+  right: 25px;
   z-index: 2;
   border: 1px solid rgba(0, 0, 0, 0.04);
   box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14);
   list-style: none;
   background-color: var(--profileBackground);
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 5px;
   display: flex;
   flex-direction: column;
-  min-width: 200px;
+  min-width: 150px;
+  font-size: 0.7rem;
 }
 
 .commentDropdownItem {
   display: flex;
   align-items: center;
   gap: 10px;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 5px;
+  border-radius: 5px;
   cursor: pointer;
-  font-size: 0.8rem;
 }
 
 .commentDropdownItem:active {
